_ref/lab13_new/bram_axi_vitis/.metadata/.plugins/org.eclipse.cdt.ui/bram_axi_app.build.log
11:34:49 **** Build of configuration Debug for project bram_axi_app ****
make all 
make --no-print-directory pre-build
a9-linaro-pre-build-step
' '
make --no-print-directory main-build
'Building file: ../src/lab13_main.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/lab13_main.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -IC:/dev/fpga_proj/_mini/manoCPU/_ref/lab13_new/bram_axi_vitis/design_1_wrapper/export/design_1_wrapper/sw/design_1_wrapper/standalone_ps7_cortexa9_0/bspinclude/include -MMD -MP -MF"src/lab13_main.d" -MT"src/lab13_main.o" -o "src/lab13_main.o" "../src/lab13_main.c"
../src/lab13_main.c: In function 'main':
../src/lab13_main.c:91:18: error: 'XPAR_LAB13_MATBI_0_BASEADDR' undeclared (first use in this function); did you mean 'XPAR_BRAM_AXI_0_BASEADDR'?
   91 |       Xil_Out32((XPAR_LAB13_MATBI_0_BASEADDR) + (MEM0_ADDR_REG*AXI_DATA_BYTE), (u32)(0x00000000)); // Clear
      |                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                  XPAR_BRAM_AXI_0_BASEADDR
../src/lab13_main.c:91:18: note: each undeclared identifier is reported only once for each function it appears in
../src/lab13_main.c:50:6: warning: unused variable 'read_buf' [-Wunused-variable]
   50 |  int read_buf[MEM_DEPTH];
      |      ^~~~~~~~
../src/lab13_main.c:47:19: warning: unused variable 'tEnd' [-Wunused-variable]
   47 |     XTime tStart, tEnd;
      |                   ^~~~
../src/lab13_main.c:47:11: warning: unused variable 'tStart' [-Wunused-variable]
   47 |     XTime tStart, tEnd;
      |           ^~~~~~
../src/lab13_main.c:46:9: warning: unused variable 'reg_num' [-Wunused-variable]
   46 |     int reg_num;
      |         ^~~~~~~
make[1]: *** [src/subdir.mk:23: src/lab13_main.o] Error 1
make: *** [makefile:34: all] Error 2

11:34:49 Build Finished (took 372ms)

